fix: z-index layering

--- a/src/assets/scss/components/button.scss
+++ b/src/assets/scss/components/button.scss
@@ -6,7 +6,7 @@
 	font: inherit;
 	color: white;
 	transition: background-color 200ms ease;
-	z-index: 1;
+	z-index: 20;
 
 	&:not([disabled]) {
 		&[color="primary"] {
