--- a/src/assets/scss/user-page/user-details.scss
+++ b/src/assets/scss/user-page/user-details.scss
@@ -5,6 +5,7 @@ $sideWidth: 24rem;
 $smallWidth: 800px;
 .user-details {
 	width: $sideWidth;
+	z-index: 20;
 
 	@include themify() {
 		background-color: themed("navBackgroundColor");
